--- a/Lesson 05/05_layout_challenge_cssgrid/starter_code/css/layout2.css
+++ b/Lesson 05/05_layout_challenge_cssgrid/starter_code/css/layout2.css
@@ -1,17 +1,16 @@
-
-.exerciseHeader, .exerciseFooter, .exerciseMain {
+.exerciseHeader,
+.exerciseFooter,
+.exerciseMain {
     margin: 0 10px 10px 10px;
 }
 
 .exerciseMain {
+    display: grid;
+    grid-template-columns: 1fr 6fr 1fr;
+    gap: 10px;
 
 }
 
-.exerciseMainContent {
+.exerciseMainContent {}
 
-
-}
-
-.exerciseMainAside {
-
-}
+.exerciseMainAside {}
