--- a/Lesson 05/05_layout_challenge_cssgrid/starter_code/css/layout5.css
+++ b/Lesson 05/05_layout_challenge_cssgrid/starter_code/css/layout5.css
@@ -1,61 +1,73 @@
-
-.exerciseFooter, .exerciseMain {
+.exerciseFooter,
+.exerciseMain {
     margin: 0 10px 10px 10px;
 }
 
 .exerciseHeader {
-
-
+    display: grid;
+    grid-template-columns: 320px 1fr;
+    gap: 10px;
+    margin-left: 10px;
+    padding-bottom: 10px;
 }
 
 .exerciseHeaderLogo {
     width: 200px;
     height: 80px;
-
 }
 
+
 .exerciseHeaderNav {
+    display: grid;
 
 }
 
 .exerciseHeaderNav ul {
+    list-style: none;
+    display: grid;
+    margin: 0;
+    padding: 0;
+    /* margin and padding are 0'd out because ul and li come with themcome with  */
+    grid-template-columns: repeat(auto-fill, 200px);
+    gap: 10px;
+    padding-bottom: 10px;
 
 }
 
-.exerciseHeaderNav ul li {
-
-
-}
+.exerciseHeaderNav ul li {}
 
 
 /* Main */
 
 .exerciseMain {
-
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 10px;
 }
 
-.exerciseMainLeftNav {
-
-
-}
+.exerciseMainLeftNav {}
 
 .exerciseMainContent {
-
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 10px;
+    grid-template-rows: 1fr 2fr 1fr;
+    min-height:400px;
 
 }
 
-.exerciseMainContent > * {
+.exerciseMainContent>* {
     margin: 0;
+
 }
 
 .exerciseMainContentBanner {
 
+    grid-column: span 4;
 }
 
 .exerciseMainContentSubBanner {
-
+    grid-column: span 3;
 }
 
-.exerciseMainContentBlock {
-
-}
+.exerciseMainContentBlock {}
