grid-plus-results

--- a/Lesson 06/airbnb-css-lab-starter-code/style.css
+++ b/Lesson 06/airbnb-css-lab-starter-code/style.css
@@ -264,7 +264,7 @@ h6 {
 
 
 
-.ab-topnav-logo .ab-topnav-nav a {}
+/* .ab-topnav-logo .ab-topnav-nav a {} */
 
 /* Colors */
 /* Redish / Pink: #ff5358 */
