--- a/Homework 03/starter_code/style.css
+++ b/Homework 03/starter_code/style.css
@@ -3,5 +3,363 @@ Green: #20c063 / RGBA(32,192,99,1)
 Gray: #e8e9ea  / RGBA (232,233,234,1)
 Dark Text: #3b4144 / RGBA (59,65,68,1) */
 
+/* * {
+    border: 1px solid grey;
+} */
 
 
+html {
+    font-family: 'Source Sand Pro', sans-serif;
+}
+
+
+/* Nav Section */
+
+.t-Nav-Main {
+    background-color: #20c063;
+    color: white;
+    display: flex;
+    justify-content: space-between;
+
+}
+
+.t-Nav-Main ul {
+    list-style: none;
+    margin: 0;
+}
+
+.t-Nav-Main ul li {
+    display: inline-block;
+    margin: 0;
+}
+
+.t-Nav-Main img {
+    /* when i tried to do the svg, the image wouldn't load. Also spent time on trying to see the image when all i needed was to put a bg color on it*/
+    height: 30px;
+    width: 78px;
+}
+
+.t-nav-left,
+.t-nav-right {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+.t-nav-item,
+.t-nav-item:visited,
+.t-nav-item a {
+    color: white;
+    font-size: 14px;
+    /* border: 3px solid black; */
+    padding: 0 12px;
+    text-decoration: none;
+
+
+}
+
+/* Jsir circle */
+.t-nav-item .jsir-circle {
+    border: 2px solid white;
+    border-radius: 50%;
+    width: 22px;
+    margin: 0px 5px;
+    padding-top: 2px;
+    height: 20px;
+    display: inline-block;
+    text-align: center;
+    text-transform: uppercase;
+
+}
+
+.t-nav-logo {
+    min-width: 80px;
+    padding: 5px 10px;
+}
+
+
+/* for sale section text */
+
+.t-for-sale-box {
+    display: flex;
+    font-size: 14px;
+    justify-content: flex-start;
+    align-items: flex-end;
+
+
+}
+
+.t-for-sale-text {
+    font-size: 14px;
+    display: flex;
+    align-items: center;
+    margin: 40px 0 0;
+    gap: 30px;
+
+
+}
+
+.t-for-sale-box h1 {
+    font-size: 16px;
+    margin: 20px;
+
+}
+
+/* Grid Area */
+
+
+.t-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 15px;
+    background-color: #e3e4e6;
+    padding: 15px;
+
+}
+
+.t-grid-item {
+    background-color: white;
+    border-radius: 4px;
+    display: flex;
+    flex-direction: column;
+    height: 260px;
+    border-radius: 5px;
+}
+
+.t-new-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #20c063;
+    color: white;
+    text-transform: uppercase;
+    width: 30px;
+    font-size: 13px;
+    border-radius: 5px;
+
+}
+
+.b-owner-box {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(128, 128, 128, 0.351);
+    color: white;
+    text-transform: uppercase;
+    padding: 0px 3px;
+    border-top-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    font-size: 12px;
+    width: 90px;
+}
+
+
+/* images section */
+
+.t-house-image {
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 160px;
+    position: relative;
+    border-top-right-radius: 5px;
+    border-top-left-radius: 5px;
+
+}
+
+.t-house-image-1 {
+
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-1.jpg);
+}
+
+.t-house-image-2 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-2.jpg);
+}
+
+.t-house-image-3 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-3.jpg);
+}
+
+.t-house-image-4 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-4.jpg);
+}
+
+.t-house-image-5 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-5.jpg);
+}
+
+.t-house-image-6 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-6.jpg);
+}
+
+.t-house-image-7 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-7.jpg);
+}
+
+.t-house-image-8 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-8.jpg);
+}
+
+.t-house-image-9 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-09.jpg);
+}
+
+.t-house-image-10 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-10.jpg);
+}
+
+.t-house-image-11 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-11.jpg);
+}
+
+.t-house-image-12 {
+    background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/2522641/house-12.jpg);
+}
+
+.t-house-facts {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px 0px 0px 10px;
+    margin: 5px 0px;
+}
+
+.t-house-facts ul {
+    padding: 0px 0px;
+    margin: 0px;
+}
+
+.t-house-facts h1 {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 15px;
+    margin: 0px;
+    padding: 0px;
+}
+
+.t-article-icon {
+    height: 15px;
+    padding: 0px 3px 0px 0px;
+}
+
+.t-house-facts li {
+    list-style: none;
+    padding: 0px 0px 2px 0px;
+}
+
+.t-house-stats ul {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 5px;
+}
+
+.t-house-stats li {
+    align-items: center;
+    display: flex;
+    flex-direction: row;
+    padding: 0px 10px 0px 0px;
+
+}
+
+.t-house-address {
+    color: grey;
+    font-style: normal;
+    margin-top: 6px;
+
+}
+
+.t-house-price {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+}
+
+
+
+.arrow-svg {
+    display: block;
+    height: 15px;
+    margin: 0px 10px;
+    padding: 5px 0px 0px 0px;
+    width: 15px;
+}
+
+/* Bottom Nav */
+
+.t-bottom-nav {
+    display: flex;
+    justify-content: center;
+    background-color: white;
+    flex-direction: column;
+    min-height: 120px;
+    align-items: center;
+    color: #20c063;
+    padding: 1px;
+    font-size: 14px;
+}
+
+.t-bottom-nav a {
+    color: #20c063;
+    text-decoration: none;
+}
+
+.t-bottom-nav .t-states {
+    padding: 0;
+    margin: 0;
+}
+
+.p-results {
+    color: grey;
+    margin: 0px;
+    margin: 10px;
+}
+
+.t-great {
+    color: black;
+    margin: 0;
+
+}
+
+.t-page-ul {
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    margin: 0px;
+}
+
+.t-page-ul li {
+    padding: 0px 10px;
+}
+
+.t-results {
+    list-style: none;
+
+}
+
+.t-states {
+    display: flex;
+    flex-direction: row;
+    gap: 5px;
+
+
+}
+
+.t-states li {
+    list-style: none;
+    margin: 0px;
+
+}
+
+
+
+
+
+/* ### Colors
+Green: #20c063 / RGBA(32,192,99,1)
+Gray: #e8e9ea  / RGBA (232,233,234,1)
+Dark Text: #3b4144 / RGBA (59,65,68,1) */
+
+/* * {
+    border: 1px solid grey;
+} */
