--- a/Homework 03/starter_code/style.css
+++ b/Homework 03/starter_code/style.css
@@ -8,10 +8,9 @@ Dark Text: #3b4144 / RGBA (59,65,68,1) */
 } */
 
 
-html {
+body {
     font-family: 'Source Sand Pro', sans-serif;
 }
-
 
 /* Nav Section */
 
