--- a/Lesson 10/02_StartupMatchmaker_Lab_Responsive/starter_code/css/memberCompanyBlock.css
+++ b/Lesson 10/02_StartupMatchmaker_Lab_Responsive/starter_code/css/memberCompanyBlock.css
@@ -52,61 +52,81 @@
     overflow: hidden;
 }
 
-@media (max-width: 780px) {
+@media only screen and (max-width: 780px) {
     /* REVIEW HERE*/
+
+    .memberCompany {
+        margin-top: 10px;
+        padding-bottom: 20px;
+        padding-bottom: 1px solid rgb(100, 100, 100);
+    }
+
+    .responsiveTileGroupItem:last-child .memberCompany {
+        border-bottom: none;
+        padding: 0px;
+    }
 
     .memberCompanyLogoHaus {
         width: 100;
         flex-basis: 100%;
-        display: flex;
-        justify-content: center;
+        text-align: center;
     }
 
-    .memberCompanyLogoHaus {
-}
+    .memberCompanyLogoHaus>img {
+        flex-basis: 100%;
+        max-width: 35%;
+        margin: 10px auto;
+    }
 
-.memberCompanyLocation {
-    flex-basis: 35%;
-    width: 35%;
-    overflow: hidden;
-}
+    .memberCompanySkills {
+        width: 50%;
+        flex-basis: 50%;
 
-.memberCompanySkills h2,
-.memberCompanyLocation h2,
-.memberCompanyDesc h2 {
-    text-transform: uppercase;
-    color: rgb(30, 50, 100);
-    font-size: 14px;
-}
+    }
 
-.memberCompanyWebsite {
-    text-transform: uppercase;
-    color: black;
-    padding: 5px;
-    border-radius: 5px;
-    font-weight: bold;
-    font-family: 'Oswald', sans-serif;
-    display: block;
-    text-align: center;
-    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
-    transition-property: box-shadow;
-    transition-duration: 200ms;
-    background-color: lightgray;
-    margin-top: 10px;
-}
+    .memberCompanyLocation {
+        flex-basis: 50%;
+        width: 35%;
 
-.memberCompanyWebsite {
-    color: black;
-}
+    }
 
-.memberCompanyWebsite:hover {
-    box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.1);
-}
+    .memberCompanySkills h2,
+    .memberCompanyLocation h2,
+    .memberCompanyDesc h2 {
+        text-transform: uppercase;
+        color: rgb(30, 50, 100);
+        font-size: 14px;
+    }
 
-.memberCompanyDesc {
-    position: relative;
-    display: block;
-    overflow: hidden;
-    clear: both;
-    padding-top: 20px;
+    .memberCompanyWebsite {
+        text-transform: uppercase;
+        color: black;
+        padding: 5px;
+        border-radius: 5px;
+        font-weight: bold;
+        font-family: 'Oswald', sans-serif;
+        display: block;
+        text-align: center;
+        box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.2);
+        transition-property: box-shadow;
+        transition-duration: 200ms;
+        background-color: lightgray;
+        margin-top: 10px;
+    }
+
+    .memberCompanyWebsite {
+        color: black;
+    }
+
+    .memberCompanyWebsite:hover {
+        box-shadow: inset 0 -3px 0 rgba(0, 0, 0, 0.1);
+    }
+
+    .memberCompanyDesc {
+        position: relative;
+        display: block;
+        overflow: hidden;
+        clear: both;
+        padding-top: 20px;
+    }
 }
