--- a/Lesson 11/01_bad_intern_plays_chicken/starter_code/css/productPage.css
+++ b/Lesson 11/01_bad_intern_plays_chicken/starter_code/css/productPage.css
@@ -2,14 +2,28 @@
 
 @media (max-width:1024px) {
     #pbeProduct {
-        display:flex;
-        flex-wrap:wrap;
+        display: flex;
+        flex-wrap: wrap;
     }
-    #pbeProduct > * {
-        width:100%;
+
+    #pbeProduct>* {
+        width: 100%;
     }
+
     #pbeProductPageTitle {
-        order:1;
+        order: 1;
+    }
+
+    #pbeProductPagePurchase {
+        order: 2;
+    }
+
+    #pbeProductDesc {
+        order: 3;
+    }
+
+    #pbeProductPageUpsell {
+        order: 4;
     }
 }
 
@@ -21,72 +35,73 @@
     width: 80%;
     font-size: 1.1rem;
     box-sizing: border-box;
-    font-style:italic;
+    font-style: italic;
 }
 
 /* Description Accordion */
 
-.pbeDescAccordion > section {
+.pbeDescAccordion>section {
     margin-top: 2rem;
 }
 
-.pbeDescAccordion > section:first-child {
+.pbeDescAccordion>section:first-child {
     margin-top: 0;
 }
 
-.pbeDescAccordion section > header {
-    display:flex;
+.pbeDescAccordion section>header {
+    display: flex;
 }
 
 
-.pbeDescAccordion section > header .pbeDescToggle {
+.pbeDescAccordion section>header .pbeDescToggle {
     font-size: 2rem;
     line-height: 2rem;
-    text-decoration:none;
-    color:#332A10;
-    margin-right:2rem;
+    text-decoration: none;
+    color: #332A10;
+    margin-right: 2rem;
     margin-left: 0.5rem;
 }
-.pbeDescAccordion section > header {
-    cursor:pointer;
+
+.pbeDescAccordion section>header {
+    cursor: pointer;
 }
 
-.pbeDescAccordion section > header h1 {
+.pbeDescAccordion section>header h1 {
     margin: 0;
     padding: 0;
 }
 
 
 .pbeDescAccordion .descClose {
-    display:none;
+    display: none;
 }
 
 .pbeDescAccordionCollapsed .pbeDescContent {
-    display:none;
+    display: none;
 }
 
 .pbeDescAccordionCollapsed .descOpen {
-    display:none;
+    display: none;
 }
 
 .pbeDescAccordionCollapsed .descClose {
-    display:block;
+    display: block;
 }
 
 
 /* Chicken Info */
 
 .pdeChickenDataPortrait {
-    max-width:100%;
-    box-sizing:border-box;
+    max-width: 100%;
+    box-sizing: border-box;
     padding: 1rem;
-    border: 1px solid rgb(220,220,220);
+    border: 1px solid rgb(220, 220, 220);
 }
 
 .pdeChickenDataPricingTable {
-    width:100%;
+    width: 100%;
     margin: 1rem 0;
-    text-align: left;
+    text-align: center;
     border: 1px solid #332A10;
 }
 
@@ -100,7 +115,7 @@
 
 .pdeChickenDataPricingTable thead {
     background-color: #332A10;
-    color:white;
+    color: white;
 }
 
 .pdeChickenDataPricingTable td,
@@ -111,7 +126,7 @@
 /* Purchase Form */
 
 .pbePurchaseForm {
-    display:flex;
+    display: flex;
     gap: 10px;
     margin: 3rem 0;
 }
@@ -124,7 +139,7 @@
     font-size: 1.6rem;
     font-weight: bold;
     text-align: center;
-    padding:0;
+    padding: 0;
     max-width: 40%;
 }
 
@@ -133,7 +148,7 @@
     color: goldenrod;
     padding: 10px;
     text-transform: uppercase;
-    display:block;
+    display: block;
     border-radius: 4px;
     font-size: 1.2rem;
     font-weight: bold;
@@ -141,66 +156,67 @@
 
 @media (max-width:768px) {
     .pbePurchaseForm {
-        flex-wrap:wrap;
+        flex-wrap: wrap;
     }
+
     .pbePurchaseForm label {
-        width:100%;
+        width: 100%;
     }
 }
 
 /* Cross Sell List */
 
 .pbeCrossSell {
-    list-style:none;
-    margin:1rem 0 0 0;
-    padding:0;
+    list-style: none;
+    margin: 1rem 0 0 0;
+    padding: 0;
     display: grid;
-    gap:20px;
-    width:100%;
-    overflow:hidden;
+    gap: 20px;
+    width: 100%;
+    overflow: hidden;
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
- 
-.pbeCrossSell > li {
-    display:block;
+
+.pbeCrossSell>li {
+    display: block;
 }
 
 
-@media (min-width:768px) {
-    .pbeCrossSell > li {
-        grid-column:span 4;
+@media (max-width:768px) {
+    .pbeCrossSell>li {
+        grid-column: span 2;
     }
 }
 
 /* Chicken Breed Block */
 
 .pbeChickenBreedBlock {
-    width:100%;
-    display:block;
-    box-sizing:content-box;
+    width: 100%;
+    display: block;
+    box-sizing: content-box;
 }
 
 .pbeChickenBreedBlock * {
-    box-sizing:content-box;
+    box-sizing: content-box;
 }
 
-.pbeChickenBreedBlock > a {
-    display:block;
+.pbeChickenBreedBlock>a {
+    display: block;
     border: 1px solid #332A10;
-    padding:0;
-    margin:0;
+    padding: 0;
+    margin: 0;
 }
 
 .pbeChickenBreedBlock img {
     max-width: 100%;
-    display:block;
-    margin:0;
+    display: block;
+    margin: 0;
 }
 
 .pbeChickenBreedBlock h1 {
     font-size: 1.1rem;
 }
 
-.pbeChickenBreedBlock h1 > a {
-    color:#332A10;
+.pbeChickenBreedBlock h1>a {
+    color: #332A10;
 }
