--- a/Lesson 11/01_bad_intern_plays_chicken/starter_code/css/productPage.css
+++ b/Lesson 11/01_bad_intern_plays_chicken/starter_code/css/productPage.css
@@ -145,7 +145,7 @@
 
 .pbePurchaseForm input[type=submit] {
     background: #22495E;
-    color: goldenrod;
+    color: white;
     padding: 10px;
     text-transform: uppercase;
     display: block;
