--- a/Homework 06/starter_code/base-style.css
+++ b/Homework 06/starter_code/base-style.css
@@ -160,79 +160,56 @@ a {
   display: none;
 }
 
-@media screen and (min-width:1600px) {
-  .trulia-grid {
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-  }
-
-}
-
-@media screen and (min-width: 1200px) and (max-width:1599px) {
-  .trulia-grid {
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-  }
-
-}
-
-@media screen and (max-width:768px) {
-  .trulia-grid {
-    grid-template-columns: 1fr 1fr;
-  }
-
-}
 
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width:1024px) {
   .trulia-nav {
-    height: auto;
     display: block;
   }
 
   .trulia-nav-toggle {
     display: block;
     color: white;
-    font-weight: bold;
-    font-size: 16px;
-    margin-right: 10px;
+    font-size: 29px;
   }
 
   .trulia-nav ul li {
     display: inline-block;
-    margin: 0;
   }
 
   .trulia-nav-logo {
-    height: 25px;
-    width: 78px;
-
+    height: 30px;
+    width: 80px;
   }
 
   .trulia-nav-left,
   .trulia-nav-right {
-    flex-wrap: wrap;
     justify-content: space-between;
   }
 
   .trulia-nav-left ul,
   .trulia-nav-right ul {
-    width: 100%;
-    display: block;
 
+    display: block;
+    width: 100%;
   }
 
   .trulia-nav-left ul li,
+  .trulia-nav-right ul li {
+    display: block;
+  }
+
+  .trulia-nav-item,
   .trulia-nav-item:visited {
     display: block;
-    font-size: 10px;
-    /* margin-top: 2px;
-    margin-bottom: 2px;
-    margin-left: 2px; */
-
+    font-size: 25px;
     margin: 2px 0px 2px 2px;
   }
 
   .trulia-nav-mobilehide {
     overflow: hidden;
+    height: 0;
+    width: 0;
   }
 
 }
@@ -284,6 +261,9 @@ p {
   font-size: 14px;
 }
 
+
+
+
 /* Look how simple grid is to make work... */
 .trulia-grid {
   display: grid;
@@ -293,6 +273,13 @@ p {
   padding: 15px;
 
 }
+
+@media screen and (min-width: 1600) {
+  .trulia-grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+  }
+}
+
 
 
 .trulia-grid-item {
