--- a/Lesson 18/01_The_Bad_Intern_Gets_Socked/starter_code/styles.css
+++ b/Lesson 18/01_The_Bad_Intern_Gets_Socked/starter_code/styles.css
@@ -8,7 +8,7 @@
 /* Sock Hero */
 
 .sockHero {
-    background: url('images/sockItToMetime.png');
+    background: url(./images/sockHero.png);
     background-position: center;
     background-size: cover;
 }
